--- a/css/custom.css
+++ b/css/custom.css
@@ -1301,6 +1301,9 @@
     .probootstrap-home-search {
       margin-top: 100px;
     }
+    .page-title{
+      margin-top: 80px;
+    }
   }
   
   .probootstrap-home-search form {
